--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prakhar Tripathi | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Style/style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -128,15 +128,7 @@
         </div>
 
     </section>
-
-    <!-- Contact -->
-    <!-- <section id="contact">
-        <h2>Contact Me</h2>
-        <p><a href="mailto:prakhartripathi1802@gmail.com">Email</a> | <a
-                href="https://www.linkedin.com/in/prakhar-tripathi-/" target="_blank">LinkedIn</a> | <a
-                href="https://github.com/Prakhar1802" target="_blank">GitHub</a>
-        </p>
-    </section> -->
+    
     <section id="contact">
         <h2>Contact</h2>
         <p>Interested in working together or have a question? Let’s connect!</p>
@@ -156,13 +148,10 @@
         </div>
     </section>
 
-
-
     <footer>
         <p>Prakhar Tripathi | © 2025</p>
     </footer>
 
-    <script src="/Script/script.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
